--- a/simple-scroll/style.css
+++ b/simple-scroll/style.css
@@ -1,39 +1,37 @@
 * {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
-    height: 100vh;
-    text-transform: uppercase;
+	border: 0;
+	margin: 0;
+	padding: 0;
 }
 h2 {
-    font-size: 60px;
-    background: #eee;
-    padding: 8px 24px;
-    border-radius: 16px;
+	font-size: 60px;
+	background: #eee;
+	padding: 8px 24px;
+	border-radius: 16px;
 }
-div:nth-child(1) {
-    background-image: url('img/img1.jpg');
-    background-size: cover;
+section {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-weight: bold;
+	font-family: Arial, Helvetica, sans-serif;
+	width: 100%;
+	height: 100vh;
+	text-transform: uppercase;
 }
-div:nth-child(2) {
-    background-color: maroon;
+.section-1 {
+	background-image: url('img/img1.jpg');
+	background-size: cover;
 }
-div:nth-child(3) {
-    height: 400px;
-    background-image: url('img/img2.jpg');
-    background-size: cover;
-
-    /* Make it fixed while scrolling */
-    background-attachment: fixed;
+.section-2 {
+	background-color: #ff4136;
 }
-div:nth-child(4) {
-    background-color: aquamarine;
+.section-3 {
+	height: 400px;
+	background-image: url('img/img2.jpg');
+	background-size: cover;
+	background-attachment: fixed;
+}
+.section-4 {
+	background-color: #ff851b;
 }
